<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SaveAp-2.0.Beta"</string>
    <string name="prefs_name">Preferences</string>
    <string name="no_items">No items to show.</string>
    <string name="strNoData">No data</string>
    <string name="strAccount">Bag</string>
    <string name="strAccountSelection">Bag</string>
    <string name="strCharge">How much?</string>
    <string name="strItem">What?</string>
    <string name="strPlace">Where?</string>
    <string name="strNotes">Add a Note</string>
    <string name="strFile">Link File</string>
    <string name="strPhoto">Take a Photo</string>
    <string name="strAuto">Autogenerated</string>
    <string name="strDate">Date:   </string>
    <string name="strTime">Time: </string>
    <string name="strAddress">Address: </string>
    <string name="strAccept">Accept</string>
    <string name="strOk">OK</string>
    <string name="strSave">Save</string>
    <string name="strDiscard">Discard</string>
    <string name="strAdd">Add</string>
    <string name="strTake">Take</string>
    <string name="strAll">View All</string>
    <string name="strMap">Map</string>
    <string name="strAccountEdit">Bags</string>
    <string name="strPlot">Chart</string>
    <string name="strPresentation">State of the Bag</string>
    <string name="strBudget">Money: </string>
    <string name="strNumberOfDays">Days of use: </string>
    <string name="strAccountDoesNotExist">Please, select first an Account.</string>
    <string name="strChangeDateAddress">Edit</string>
    <string name="strChangeDate">Pick a date</string>
    <string name="strChangeTime">Pick an hour</string>
    <string name="strChangeAddress"></string>
    <string name="strLatitude">Latitude:</string>
    <string name="strLongitude">Longitud</string>
    <string name="strCheckChangeDate">Change Location</string>
    <string name="strCheckNotes">Check Notes</string>
    <string name="strCheckFile">Check Files</string>
    <string name="strCheckPhoto">Check Photos</string>
    <string name="strName">Name: </string>
    <string name="strPeriod">Period: </string>
    <string name="strStartDate">Start Date: </string>
    <string name="strEndDate">End Date: </string>
    <string name="strCurrency">Currency: </string>
    <string name="strNewAccount">New</string>
    <string name="strChangeAccount">Change</string>
    <string name="strEditAccount">Edit</string>
    <string name="strPickADate">Pick one</string>
    <string name="strNoDate">None      </string>
    <string name="strIdList">Id</string>
    <string name="strDateAndTimeList">When</string>
    <string name="strPlaceAndItemList">Where &amp; What</string>
    <string name="strWhere">Where </string>
    <string name="strChargeList">How Much </string>
    <string name="strTotalDaysList">Days of use: </string>
    <string name="strFooterBudget">In the bag: </string>
    <string name="strTitleChangeDateAddress">Change Date and Address.</string>
    <string name="txtEditOutlay">Edit</string>
    <string name="txtDeleteOutlay">Delete</string>
    <string name="strDialogDelete">Are you sure you want to delete this movement?</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="strNoteAdded">Note dded correctly</string>
    <string name="strAlert">Alert!</string>
    <string name="strNotSupported">This functionality is not supported in free version. Upgrade now.</string>
    <string name="strWidget">Widget</string>
</resources>
