<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent">
	<TextView
		android:id="@+id/txtAccount"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:background="@color/yellow"
		android:textColor="@color/black"
		android:paddingTop="10dip"
		android:paddingBottom="10dip">
	</TextView>
	<!-- _________________________ Id _______________________________________________ -->
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:layout_width="30dip"
			android:layout_height="wrap_content"
			android:layout_weight="1">
			<TextView
				android:gravity="center_horizontal"
				android:text="@string/strIdList"
				android:textSize="12dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</TextView>
		</LinearLayout>
		<!-- _________________________ DATE&TIME _______________________________________________ -->
		<LinearLayout
			android:layout_width="70dip"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:orientation="horizontal">
			<TextView
				android:textSize="12dip"
				android:text="@string/strDateAndTimeList"
				android:gravity="center_horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</TextView>
		</LinearLayout>
		<!-- _________________________ PLACE&ITEM _______________________________________________ -->
		<LinearLayout
			android:layout_width="120dip"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:textSize="12dip"
				android:text="@string/strPlaceAndItemList"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</TextView>
		</LinearLayout>
		<!-- _________________________ CHARGE _______________________________________________ -->
		<LinearLayout
			android:layout_width="100dip"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:orientation="vertical">
			<TextView
				android:textSize="12dip"
				android:text="@string/strChargeList"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</TextView>
		</LinearLayout>
	</LinearLayout>
	<!-- _________________________ DIVIDER _______________________________________________ -->
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:orientation="horizontal"
		android:background="@drawable/coloryellow">
		<View
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:id="@+id/txtAccount"
			android:textColor="@color/black">
		</View>
	</LinearLayout>
	<!-- _________________________ LIST ELEMENTS _______________________________________________ -->
	<ListView
		android:id="@+id/android:list"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:cacheColorHint="#00000000"></ListView>
	<!-- _________________________ FOOTER _______________________________________________ -->
	<LinearLayout
		android:background="@color/yellow"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1">
			<TextView
				android:textSize="12dip"
				android:text="@string/strTotalDaysList"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</TextView>
			<TextView
				android:id="@+id/txtFooterDays"
				android:textSize="12dip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</TextView>
		</LinearLayout>
		<!-- _________________________BAG _______________________________________________ -->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="horizontal">
			<TextView
				android:textSize="12dip"
				android:layout_height="wrap_content"
				android:text="@string/strFooterBudget"
				android:layout_width="wrap_content"></TextView>
			<TextView
				android:textSize="12dip"
				android:layout_height="wrap_content"
				android:id="@+id/txtFooterBudget"
				android:layout_width="wrap_content"></TextView>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>