<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical">
	<!-- _________________________HOME_______________________________________________ -->
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:background="@drawable/coloryellow">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:orientation="horizontal"
			android:paddingTop="10dip"
			android:paddingBottom="10dip">
			<TextView
				android:text="@string/strAccount"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/txtAccount"
				android:textColor="@color/black">
			</TextView>
		</LinearLayout>
	</LinearLayout>
	<TextView
		android:textAppearance="@style/stlTitle"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/strTitleChangeDateAddress"></TextView>
	<!-- _________________________ BODY _______________________________________________ -->
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:orientation="vertical">
		<!-- _________________________ DATE _______________________________________________ -->
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:layout_weight="1"
			android:orientation="horizontal">
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|center_horizontal"
				android:layout_weight="1"
				android:orientation="vertical">
				<!-- _________________________ TEXT _______________________________________________ -->
				<LinearLayout
					android:layout_weight="1"
					android:orientation="vertical"
					android:gravity="center_vertical|center_horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<LinearLayout
						android:layout_weight="1"
						android:orientation="vertical"
						android:gravity="center_vertical|center_horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content">
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:id="@+id/txtDateTag"
							android:text="@string/strDate"></TextView>
					</LinearLayout>
					<LinearLayout
						android:layout_weight="1"
						android:orientation="vertical"
						android:gravity="center_vertical|center_horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content">
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:id="@+id/txtDate"></TextView>
					</LinearLayout>
				</LinearLayout>
				<!-- _________________________ BUTTON _______________________________________________ -->
				<LinearLayout
					android:orientation="horizontal"
					android:gravity="center_vertical|center_horizontal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<Button
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:id="@+id/btnChangeDate"
						android:text="@string/strChangeDate"></Button>
				</LinearLayout>
			</LinearLayout>
			<!-- _________________________ TIME _______________________________________________ -->
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|center_horizontal"
				android:layout_weight="1"
				android:orientation="vertical">
				<!-- _________________________ TEXT _______________________________________________ -->
				<LinearLayout
					android:layout_weight="1"
					android:orientation="vertical"
					android:gravity="center_vertical|center_horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<LinearLayout
						android:layout_weight="1"
						android:orientation="vertical"
						android:gravity="center_vertical|center_horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content">
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:id="@+id/txtTimeTag"
							android:text="@string/strTime"></TextView>
					</LinearLayout>
					<LinearLayout
						android:layout_weight="1"
						android:orientation="vertical"
						android:gravity="center_vertical|center_horizontal"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content">
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:id="@+id/txtTime"></TextView>
					</LinearLayout>
				</LinearLayout>
				<!-- _________________________ BUTTON _______________________________________________ -->
				<LinearLayout
					android:orientation="horizontal"
					android:gravity="center_vertical|center_horizontal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<Button
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:id="@+id/btnChangeTime"
						android:text="@string/strChangeTime"></Button>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:orientation="vertical"
			android:layout_marginRight="40dp"
			android:layout_marginLeft="40dp"
			android:layout_marginTop="10dp"
			android:background="@drawable/coloryellow">
			<View
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/black">
			</View>
		</LinearLayout>
		<!-- _________________________ ADDRESS _______________________________________________ -->
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:orientation="vertical">
			<!-- _________________________ TEXT _______________________________________________ -->
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical">
				<!-- _________________________ TEXT _______________________________________________ -->
				<LinearLayout
					android:layout_weight="1"
					android:orientation="vertical"
					android:gravity="center_vertical"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<LinearLayout
						android:layout_weight="1"
						android:orientation="horizontal"
						android:gravity="center_vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content">
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:id="@+id/txtAddresTag"
							android:text="@string/strAddress"></TextView>
					</LinearLayout>
					<LinearLayout
						android:layout_weight="1"
						android:orientation="horizontal"
						android:gravity="center_vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content">
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:id="@+id/txtAddres"></TextView>
					</LinearLayout>
				</LinearLayout>
				<!-- _________________________ CHANGE ADDRESS _______________________________________________ -->
				<LinearLayout
					android:layout_weight="1"
					android:orientation="horizontal"
					android:gravity="center_vertical"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<LinearLayout
						android:layout_weight="2"
						android:orientation="horizontal"
						android:gravity="center_vertical"
						android:layout_width="fill_parent"
						android:layout_height="fill_parent">
						<TextView
							android:layout_height="fill_parent"
							android:layout_width="fill_parent"
							android:id="@+id/txtChangeAddress"
							android:text="@string/strChangeAddress"></TextView>
					</LinearLayout>
					<LinearLayout
						android:layout_weight="1"
						android:orientation="horizontal"
						android:gravity="center_vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content">
						<Button
							android:layout_height="wrap_content"
							android:layout_width="fill_parent"
							android:id="@+id/btnChangeAddress"
							android:text="@string/strCheckChangeDate"></Button>
					</LinearLayout>
				</LinearLayout>
				<!-- _________________________ LATITUDE & LONGITUDE _______________________________________________ -->
				<LinearLayout
					android:layout_weight="1"
					android:orientation="horizontal"
					android:gravity="center_vertical"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<LinearLayout
						android:layout_weight="1"
						android:orientation="horizontal"
						android:gravity="center_vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content">
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:text="@string/strLatitude"></TextView>
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:id="@+id/txtLatitude"></TextView>
					</LinearLayout>
					<LinearLayout
						android:layout_weight="1"
						android:orientation="horizontal"
						android:gravity="center_vertical"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content">
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:text="@string/strLongitude"></TextView>
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:id="@+id/txtLongitude"></TextView>
					</LinearLayout>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<!-- _________________________BUTTONS_______________________________________________ -->
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<!-- _________________________ SAVE _______________________________________________ -->
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="horizontal">
			<Button
				android:text="@string/strSave"
				android:id="@+id/btnSave"
				android:gravity="center_horizontal|center_vertical"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"></Button>
		</LinearLayout>
		<!-- _________________________ DISCARD _______________________________________________ -->
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="horizontal">
			<Button
				android:text="@string/strDiscard"
				android:id="@+id/btnDiscard"
				android:gravity="center_horizontal|center_vertical"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"></Button>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>