<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:weightSum="16"
	android:orientation="vertical">
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:weightSum="8"
		android:orientation="horizontal"
		android:background="@drawable/coloryellow">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:orientation="horizontal"
			android:paddingTop="10dip"
			android:paddingBottom="10dip">
			<TextView
				android:text="@string/strAdd"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:id="@+id/txtAccount"
				android:textColor="@color/black">
			</TextView>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_weight="7"
			android:orientation="vertical"
			android:layout_height="fill_parent">
			<RelativeLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:orientation="horizontal">
				<Button
					android:background="@drawable/yellowbutton"
					android:id="@+id/btnAccount"
					android:text="------"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:paddingTop="10dip"
					android:paddingBottom="10dip"></Button>
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="4"
		android:weightSum="2"
		android:orientation="horizontal">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/btnAdd"
				android:src="@drawable/add"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView
				android:id="@+id/txtAdd"
				android:text="@string/strAdd"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/btnTake"
				android:src="@drawable/take"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView
				android:id="@+id/txtTake"
				android:text="@string/strTake"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="4"
		android:weightSum="2"
		android:orientation="horizontal">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/btnAll"
				android:src="@drawable/all"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView
				android:id="@+id/txtAll"
				android:text="@string/strAll"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/btnMap"
				android:src="@drawable/map"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView
				android:id="@+id/txtMap"
				android:text="@string/strMap"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="4"
		android:weightSum="2"
		android:orientation="horizontal">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/btnAccountEdit"
				android:src="@drawable/account"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView
				android:id="@+id/txtAccountEdit"
				android:text="@string/strAccountEdit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:id="@+id/btnPlot"
				android:src="@drawable/chart"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView
				android:id="@+id/txtPlot"
				android:text="@string/strPlot"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="4"
		android:weightSum="1"
		android:orientation="horizontal">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:orientation="vertical"
			android:gravity="center">
			<TextView
				android:text="Eight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView
				android:text="Eight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView
				android:text="Eight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>